# rust-mods-example

./: Cargo.toml
game/: main.lua  utils.lua
game/mods/base/: mod.json  mod.lua
game/mods/dlc/: mod.json  mod.lua
src/: logger.rs  main.rs  mods.rs
