[package]
name = "day_1_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
rlua = "0.19.4"
serde = { version = "*", features = ["derive"]}
serde_json = "1.0.95"
